k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hazelcast
  labels:
    app: hazelcast
    type: backend
spec:
  template:
    metadata:
      name: hazelcast
      labels:
        app: hazelcast
        type: backend
    spec:
      containers:
        - name: hazelcast-container
          image: u2dtecnologia/playground:e34c93e3771ca82c126c236a3dea84
          ports:
            - name: http
              containerPort: 8080
            - name: multicast
              containerPort: 5701

  replicas: 2
  strategy:
    type: RollingUpdate
  selector: 
    matchLabels:
      type: backend
# minikube ssh docker pull u2dtecnologia/poc-hazelcast:1.0.6 -> se der erro ao fazer pull na imagem
